src/Microsoft.Health.Fhir.Liquid.Converter.UnitTests/TestData/TestTemplates/InvalidValidateTemplates/ErrorQuotedSchemaInSyntax.liquid
{% validate Schemas/TestSchema.schema.json -%}
{
    "resourceType": "{{ msg.resourceType }}",
    "id": "{{ msg.id }}"
}
{% endvalidate -%}
